--- a/Doku/Bericht/00-abbreviations/00-abbreviations.tex
+++ b/Doku/Bericht/00-abbreviations/00-abbreviations.tex
@@ -15,6 +15,11 @@
 	\acro{cpu}[CPU]{Central Processing Unit}
 \end{acronym}
 
+%D
+\begin{acronym}
+	\acro{ldo}[LDO]{Low Dropout Regulator}
+\end{acronym}
+
 %E
 \begin{acronym}
 	\acro{epd}[EPD]{E-Paper Display}
