--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -1,4 +1,4 @@
-There are several different technologies which are applied in \acl{epd}.
+There are several different technologies which are applied in \acl{epd}'s.
 Since the developed prototype uses a microencapsulated electrophoretic display, this section only describes this specific implementation.
 
 A film consisting of microscopic capsules is coated onto a backplane, which basically is a matrix of electrodes.
@@ -17,7 +17,7 @@ The particles now begin to move in opposite directions through the fluid when ex
 The pixel (defined by the electrode size) appears white, if the scattering particles are near the frontplane and black, if otherwise.
 If no voltage is applied to the electrodes, the particles maintain their last position.
 This makes it possible, to switch off the power supply when no image update is needed. 
-This is the reason why the power consumption can be strongly reduced compared to other types of display \cite{amundson}.
+This is the reason why the power consumption can be strongly reduced compared to other types of displays \cite{amundson}.
 
 \begin{figure}[ht]
 	\centering
@@ -25,4 +25,4 @@ This is the reason why the power consumption can be strongly reduced compared to
 	\caption{\acl{epd} under microscope with 250x magnification.\label{theory:micro}}
 \end{figure}
 
-Figure \ref{theory:micro} shows an e-paper display with 250x magnification.
+Figure \ref{theory:micro} shows the used \acl{epd}.
