--- a/Doku/Bericht/4-development/4-development.tex
+++ b/Doku/Bericht/4-development/4-development.tex
@@ -1,9 +1,11 @@
 \chapter{Development}
+This chapter covers the developing process in more detail.
+It is divided in a hardware and a software section.
 
 \section{Hardware}
 \input{4-development/hardware/hardware.tex}
 
-\newpage
+\clearpage
 \section{Software}
 \input{4-development/software/software.tex}
 
