--- a/Doku/Bericht/4-development/hardware/graphics/top/top_schematics.tex
+++ b/Doku/Bericht/4-development/hardware/graphics/top/top_schematics.tex
@@ -38,9 +38,7 @@
 	\node[right] at (20, -0.4) {\large ADP5090};
 	
 	\fill[white, draw=black] (20,-6) rectangle ++(6,-4);
-	\node[] at (22.7, -7.85) {\large Self-holding \&};
-	\node[] at (23.07, -8.35) {\large Step-up Regulator};
-	
+	\node[] at (23, -8) {\large Power Latch};
 	%Microcontroller
 	\fill[red!20!white] (9-\ed, -6+\ed) rectangle (16.5+\ed, -10-\ed);
 	\node[below, red!50!black] at (10.45,-6+\ed) {\huge Microcontroller};
