--- a/Doku/Bericht/5-results/5-results.tex
+++ b/Doku/Bericht/5-results/5-results.tex
@@ -1,4 +1,5 @@
 \chapter{Results}
+This chapter covers the most important results.
 
 \section{Power supply}
 \input{5-results/power_supply/power_supply.tex}
@@ -6,5 +7,6 @@
 \section{Power consumption}
 \input{5-results/energy/energy.tex}
 
+\newpage
 \section{Communication}
 \input{5-results/communication/communication.tex}
