--- a/Doku/Bericht/5-results/energy/energy.tex
+++ b/Doku/Bericht/5-results/energy/energy.tex
@@ -14,6 +14,7 @@ Clearly visible is the current peak, which occurs when the system is woken up.
 Short after the 5 seconds mark, initializing and data receiving is finished and the display is refreshed.
 The current peaks there are due to the charge pumps on the display driver.
 
+\newpage
 With voltage and current given, the power over time can be calculated.
 This curve is plotted in Figure \ref{results:p}.
 obviously, the power follows the same course like the current since the voltage is constant.
@@ -31,8 +32,9 @@ Considering the Rficient which consumes $4.5\mu \text{W}$, it is possible to est
 \begin{align}
 	t_{\text{E}}=\frac{2.7504\,\text{J}}{485.52\,\mu \text{W}-4.5\mu \text{W}}=5717.85\,\text{s}\approx 1\,\text{h } 35\,\text{min}.
 \end{align}
-Not taken into account is the leakage of the super capacitor and losses in the ADP5090.
+Not taken into account is the leakage of the super-capacitor and losses in the ADP5090.
 
+\clearpage
 \subsection{Energy storage}
 The stored energy in a capacitor is
 \begin{align*}
