--- a/Doku/Bericht/6-summary/6-summary.tex
+++ b/Doku/Bericht/6-summary/6-summary.tex
@@ -8,7 +8,7 @@ Using a low power wakeup receiver turned out to be the right approach, since the
 This power loss is easily compensated by the solar cells which deliver $485.52\,\mu\text{W}$ given an illuminance of 200\,lux.
 If no light reaches the solar cells and no wakeups occur, it is assumed that the prototype stays functional for over one year, under the condition that the super capacitor was charged fully beforehand.
 
-\paragraph{Future work}
+\section*{Future work}
 Following improvements on the prototype have to be made, before developing a complete layout of the receiver:
 \begin{itemize}
 	\item[-] Developing a power management which protects the super capacitor from over discharging
