--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -27,7 +27,7 @@
 \usepackage[all]{xy}
 \usepackage{paralist}
 %\usepackage[colorlinks=true]{hyperref}
-\usepackage{hyperref}
+\usepackage[pdfborder={0 0 0}]{hyperref}
 \usepackage{array}
 \usepackage{tikz}
 \usepackage{pdfpages}
@@ -140,7 +140,7 @@ HSR Hochschule Für Technik Rapperswil
 
 %bibliography
 \chapter*{References}
-\addcontentsline{toc}{chapter}{Sources} 
+\addcontentsline{toc}{chapter}{References} 
 \printbibliography[heading=none]
 
 %Abbildungsverzeichnis
