--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -3,10 +3,8 @@
 \section*{Introduction}
 In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to a room entrance. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Hence, screens need to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor lightning, and is updated via a wireless interface.
 
-
-
 \section*{Approach}
-The system is powered by a energy storage system that uses solar cells to harvest energy. This energy will then be stored in a super-capacitor to ensure minimal power leakage. As this specific type of energy harvesting unit cannot provide vast amounts of energy over a longer time period, the whole system fully runs in short bursts. One solution introduced to save energy is by using an E-Paper Display (EPD). The EPD only uses energy when updating its screen but not for maintaining, the image displayed on the screen, which results in a high energy reduction.   Furthermore, in addition to the EPD a constantly listening ultra-low power wakeup receiver is used. This will further enhance the system, as it will generate an interruption to enable the power supply of the remaining system only when receiving a specific wakeup sequence. The remaining part then receives data via Bluetooth, which will then display the data and eventually cuts its own power supply to enter a new cycle of low-power listening mode.
+The system is powered by a energy storage system that uses solar cells to harvest energy. This energy will then be stored in a super-capacitor to ensure minimal power leakage. As this specific type of energy harvesting unit cannot provide vast amounts of energy over a longer time period, the whole system fully runs in short bursts. One solution introduced to save energy is by using an \acf{epd}. The \acs{epd} only uses energy when updating its screen but not for maintaining the displayed image. Furthermore, in addition to the \acs{epd} ,a constantly listening ultra-low power wakeup receiver is used. This will further enhance the system, as it will generate an interrupt to connect the power supply to the remaining system only when receiving a specific wakeup sequence. This part then receives data via Bluetooth and displays it on the screen. After that, the system eventually cuts its own power supply to enter the low-power listening mode again.
 
 \section*{Conclusion}
-This semester thesis was designed to elaborate a sustainable screen in order to display a room’s occupancy next to its entrance. Upon analysis of potential solutions, it can be concluded that the outlined energy harvesting does provide enough energy to sustainable run the introduced E-Paper Display (EPD), if up-dating the schedule does not occur too frequently. Moreover, it has been identified that a wakeup receiver is the most suitable tool to support the display. The implementation of a latch circuit makes it possible to switch off the whole system (except for the wakeup receiver) when not in usage. In total the wakeup receiver consumes a maximum of $4.5\,\mu \text{W}$ during listening mode while the system harvests around $485,52\,\mu\text{W}$. 
+This semester thesis was designed to elaborate a sustainable screen in order to display a room’s occupancy next to its entrance. Upon analysis of potential solutions, it can be concluded that the outlined energy harvesting does provide enough energy to sustainable run the introduced \acf{epd}, if up-dating the schedule does not occur too frequently. Moreover, it has been identified that a wakeup receiver is the most suitable tool to support the display. The implementation of a latch circuit makes it possible to switch off the whole system (except for the wakeup receiver) when not in use. In total, the wakeup receiver consumes a maximum of $4.5\,\mu \text{W}$ during listening mode while the system harvests around $485,52\,\mu\text{W}$. 
