--- a/Doku/Bericht/1-intro/1-intro.tex
+++ b/Doku/Bericht/1-intro/1-intro.tex
@@ -14,7 +14,7 @@ The primary goal of this semester thesis was to create a prototype by combining 
 In order to clarify the application of the terms in the following sections, the term “receiver” is used for the display including all its components. Additionally, the term “transmitter” is used for the computer and its additional hardware. Henceforth, it has to be stated that this does not imply that the communication is uni-directional. The receiver as well as the transmitter should be able to receive and transmit data. It should rather suggest that the general data transfer appears from the computer to the screen. 
 
 \subsection{Transmitter}
-This end solely consists of a computer, a wireless interface (for the main communication) and the transmitter module (for the wakeup receiver). A short python script enables the user to define which data the receiver should display over a fixed template. The information is transferred to a wireless interface, which transmits it to the receiver end after the receiver is woken up.
+This end solely consists of a computer, a wireless interface (for the main communication) and the transmitter module of the wakeup receiver. A short python script enables the user to define which data the receiver should display over a fixed template. The information is transferred to a wireless interface, which transmits it to the receiver end after the receiver is woken up.
 
 \subsection{Receiver}
-This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, ans \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd} a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection is bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor, which is charged by solar cells. When the device is switched off, the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
+This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, an \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd}, a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection is bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor, which is charged by solar cells. When the device is switched off, the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
