--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -24,7 +24,7 @@ Figure \ref{software:sequence} shows the general sequence diagram of one display
 \lstset{style=mystyle}
 
 \subsubsection{Microcontroller}
-To develop firmware for the STM32, the Hardware abstractions layer provided by STMicroelectronics is used. The firmware running on the microcontroller is responsible for the following tasks:
+To develop the firmware for the STM32, the Hardware abstractions layer provided by STMicroelectronics is used. The firmware running on the microcontroller is responsible for the following tasks:
 \begin{itemize}[ht]
 	\item[-] Initialize the IT8951 display driver chip
 	\item[-] Receive data via UART from the \acs{ble}-module
@@ -68,6 +68,7 @@ The STM32 uses two bus interfaces and some extra \acs{gpio}'s to communicate and
 	\includegraphics[height=0.8\textheight]{4-development/software/graphics/main.pdf}
 	\caption{STM32 program flow chart.\label{software:main}}
 \end{figure}
+
 In the flowchart in Figure \ref{software:main} is visible, that the controller itself never enters a deep sleep mode in the end of an program cycle. Instead the controller runs trough a power kill sequence which disables it's own power supply. As a result, the controller repeats the initializing process at the begin o every wakeup.
 
 \paragraph{IT8951 Driver}
@@ -75,19 +76,20 @@ To program the communication between the STM32 with the IT8951, a programming gu
 The interface is based on a 16-bit \acs{spi}-bus with three additional control pins. Since the IT8951 requires a big-endian format, the STM32 has to reformat all the bytes. 
 The manufacturer recommends a SPI clock rate of 12\,MHz, while the maximum given in the data sheet is 24\,MHz.
 This leads to a maximum transfer rate of 3\,MBytes/s  \cite{IT8951}. 
-Writing an image to the \acs{epd} needs  
+Writing an image to the \acs{epd} takes  
 \begin{align}
-	t_{\text{write}}=\frac{(1200\cdot 825)/2\,\text{bits}}{3\,\text{MBytes}/s}=0.165\,\text{s}.
+	t_{\text{write}}=\frac{(1200\cdot 825)/2\,\text{bits}}{3\,\text{MB}/s}=0.165\,\text{s}.
 \end{align}
-Note that this calculation assumes 4 bits (for the 16 grey scales) per pixel.
+Note that this calculation assumes 4 bits per pixel.
 
 The measured time for one writing cycle, including initialisation and fetching of the buffer registers, resulted in 0.168\,seconds. It is also possible to overclock the IT8951.
 With 28\,MHz, it was still possible to read and write the display controller.      
 
+\clearpage
 \paragraph{Template}
-The schedule template is preloaded to the flash of the STM32. To save memory, the file is converted into an $1200 \times 825$ PNG with the colour depth of 4 bit. The PNG then is used to create a c-file which holds an one dimensional array with all the pixel data in it. The pixel location is mapped to the memory as shown in figure\ref{theory:matrix}. 
-
-\begin{figure}[H]
+The schedule template is preloaded to the flash of the STM32. To save memory, the file is converted into an $1200 \times 825$ PNG with the colour depth of 4 bit. The PNG then is used to create a c-file which holds an one dimensional array with all the pixel data in it.
+This is what the stored array looks like:
+\begin{figure}[ht]
 	\begin{lstlisting}
 	const unsigned char schedule[]={0xff,0xff,0xff,0xff,0xff,0xff,0xff,...
 									0xff,0xff,0xff,0xff,0xff,0xff,0xff,...
@@ -97,7 +99,8 @@ The schedule template is preloaded to the flash of the STM32. To save memory, th
 									0xdd,0xdd,0xdd,0xdd,0xdd,0xdd,0xdd};
 	\end{lstlisting}
 \end{figure}
-Each Hex number in the array resembles two pixels of each four bit. In the template shown in image\ref{software:kalender}, there are already some information given like the calendar week and weekdays. Storing the template like this uses 495000\,bits of flash memory. 
+
+Each Hex number in the array resembles two pixels of each four bit. In the template shown in Figure \ref{software:kalender}, there is already information given like the calendar week and weekdays. Storing the template like this takes 495000\,bits of flash memory (calculated in equation \eqref{theory:bits}). 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=0.6\textwidth]{4-development/software/graphics/Kalender.png}
@@ -106,39 +109,34 @@ Each Hex number in the array resembles two pixels of each four bit. In the templ
 
 
 \paragraph{Fonts}
-All fonts are c-files which hold two arrays. the first one contains all different ASCII characters, while the second array holds the font information like with and height. All characters have the compressed layout as described in Section \ref{theory:CompressedFonts}.
-\begin{figure}[ht]
-	\begin{lstlisting}
-	const uint8_t Font12_Table[] = 
-	{
-		.
-		.
-		.,
-		// @396 'A' (7 pixels wide)
-		0x00, //        
-		0x30, //   ##   
-		0x10, //    #   
-		0x28, //   # #  
-		0x28, //   # #  
-		0x28, //   # #  
-		0x7C, //  ##### 
-		0x44, //  #   # 
-		0xEE, // ### ###
-		0x00, //        
-		0x00, //        
-		0x00, // 
-		.
-		.
-		. 
-		};
-		
-		sFONT Font12 = {
-		Font12_Table,
-		7, /* Width */
-		12, /* Height */
-		};
-	\end{lstlisting}
-\end{figure}
+All fonts are c-files which hold two arrays.
+The first one contains all different ASCII characters, while the second array holds the font information like with and height. All characters have the compressed layout as described in Section \ref{theory:CompressedFonts}.
+%\begin{figure}[ht]
+%	\begin{lstlisting}
+%	const uint8_t Font12_Table[] = 
+%	{
+%		// @396 'A' (7 pixels wide)
+%		0x00, //        
+%		0x30, //   ##   
+%		0x10, //    #   
+%		0x28, //   # #  
+%		0x28, //   # #  
+%		0x28, //   # #  
+%		0x7C, //  ##### 
+%		0x44, //  #   # 
+%		0xEE, // ### ###
+%		0x00, //        
+%		0x00, //        
+%		0x00, // 
+%		};
+%		
+%		sFONT Font12 = {
+%		Font12_Table,
+%		7, /* Width */
+%		12, /* Height */
+%		};
+%	\caption{Stored font.\label{software:fonts}}
+%\end{figure}
 
 \paragraph{Writing characters}
 To write the desired characters to a image buffer, the pixel data needs to be converted and placed into the right spot. 
@@ -225,7 +223,7 @@ All other graphical functions implemented use the \texttt{drawChar()} function t
 %\end{lstlisting}
 %\end{figure}
 
-
+\clearpage
 \subsubsection{Communication}
 Due to the fact that the software on both sides of the bluetooth channel is very similar it is explained in this section.
 A \acs{ble} example project, which was provided by nordic, was only slightly changed to fit the purpose of this prototype.
@@ -247,6 +245,7 @@ It can make read and write requests to access the data on the peripheral, which 
 The server on the other, hand can only send notifications to the client if new data is ready.
 It should be noted, that the roles of client and server do not in any case have to be assigned to central and peripheral, but also the other way around. 
 
+\newpage
 \subsection{Transmitter}
 
 \subsubsection{Python-Script}
