--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -9,6 +9,8 @@
 \titlepage
 \end{frame}
 
+\section{Problem}
+\input{slides/intro.tex}
 \section{Aufgabe}
 	\input{slides/ziel.tex}
 \section{Vorgehen}
