--- a/Präsentation/slides/ziel.tex
+++ b/Präsentation/slides/ziel.tex
@@ -1,3 +1,13 @@
+
+\begin{frame}
+\frametitle{Raumbelegungsplan}
+\centering
+\setlength{\fboxsep}{0.5pt}
+\setlength{\fboxrule}{0.5pt}
+\fcolorbox{gray}{gray}{\includegraphics[width=1\textwidth, page=3]{bilder/nodes.pdf}}	
+\end{frame}
+
+
 \begin{frame}
 	\frametitle{Raumbelegungsplan}
 		\centering
