--- a/Präsentation/slides/entwicklung.tex
+++ b/Präsentation/slides/entwicklung.tex
@@ -4,3 +4,55 @@
 		\includegraphics[width=0.8\textwidth]{bilder/top_schematics.pdf}
 	
 \end{frame}
+
+\section{Resultat}
+
+\begin{frame}
+	\frametitle{Resultat}
+	\centering
+	\includegraphics[width=0.7\textwidth]{bilder/env1.jpg}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Resultat}
+\centering
+\includegraphics[width=0.7\textwidth]{bilder/env2.jpg}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Resultat}
+\centering
+\includegraphics[width=0.7\textwidth]{bilder/ui.pdf}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Weiter Entwicklung}
+\centering
+\setlength{\fboxsep}{0.5pt}
+\setlength{\fboxrule}{0.5pt}
+\fcolorbox{gray}{gray}{\includegraphics[width=1\textwidth, page=9]{bilder/nodes.pdf}}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Weiter Entwicklung}
+\centering
+\setlength{\fboxsep}{0.5pt}
+\setlength{\fboxrule}{0.5pt}
+\fcolorbox{gray}{gray}{\includegraphics[width=1\textwidth, page=7]{bilder/nodes.pdf}}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Weiter Entwicklung}
+\centering
+\setlength{\fboxsep}{0.5pt}
+\setlength{\fboxrule}{0.5pt}
+\fcolorbox{gray}{gray}{\includegraphics[width=1\textwidth, page=8]{bilder/nodes.pdf}}	
+\end{frame}
+
+\begin{frame}
+\frametitle{Weiter Entwicklung}
+\centering
+\setlength{\fboxsep}{0.5pt}
+\setlength{\fboxrule}{0.5pt}
+\fcolorbox{gray}{gray}{\includegraphics[width=1\textwidth, page=9]{bilder/nodes.pdf}}	
+\end{frame}
